# M1_Internship_VortexDynCollapse

./: .gitignore  README.md  TODO.txt  environment.yml  main.py  pyproject.toml
athena_collapsingbox/vis/: tags
athena_collapsingbox/vis/python/: tags
athena_collapsingbox/vis/vtk/: join_all_vtk.sh  join_vtk  join_vtk++_db  join_vtk++_db.c  join_vtk_mac  join_vtk_mac (rigel's conflicted copy 2024-01-16)  tags
results/: README.md
src/athena_collapse_analysis/: __init__.py  ath_io.py  config.py  utils.py
src/athena_collapse_analysis/analysis/: __init__.py  conservation_laws.py  extract_2D_hamiltonian_model_parameters.py  fit_ellipses.py  max_mach_number.py  plot_one.py
src/athena_collapse_analysis/analytical_models/: Kirchoff_2D_Hamiltonian.py  Kirchoff_2D_Hamiltonian_comparison.py  Kirchoff_3D_advection.py  Kirchoff_3D_advection_comparison.py  compare_2D_3D_theories.py  extract_simulation_data.py  tempCodeRunnerFile.py
src/athena_collapse_analysis/io/: __init__.py  ath_io.py  athena_read.py
src/athena_collapse_analysis/utils/: __init__.py
src/athena_collapse_analysis/visu/: __init__.py  plot_collapse_profile.py  plot_density.py  plot_initial_profiles.py  plot_vorticity.py  vorticity_animation.py
tests/: conftest.py  test_ath_io.py
tests/sample_data/one_vortex_collapse/: OneVortex.hst
